
Thu May 23 18:44:37 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* object.c: special case string ctros in invoke.
	* gc.c: silly whitespace changes.

2002-05-23  Dietmar Maurer  <dietmar@ximian.com>

	* threadpool.[ch]: impl. a threadpool that can
	be used by mint and mono.

2002-05-22  Martin Baulig  <martin@gnome.org>

	* reflection.h (MonoArrayList): New typedef.
	(MonoReflectionAssemblyBuilder): Added `table_indexes' and `methods'.

	* debug-symfile.c (ves_icall_Debugger_MonoSymbolWriter_method_from_token):
	The first argument is now a `MonoReflectionModuleBuilder *', the return
	value is a `MonoReflectionModuleBuilder *'.  Use the AssemblyBuilder's
	`methods' field to get the method builder.  The `token' argument is the
	unfixed token.

	* unicode.c (iconv_get_length, iconv_convert): Silently ignore all
	invalid characters instead of g_assert_not_reached()ing.  This seems
	to be the behaviour of mscorlib.

2002-05-22  Dietmar Maurer  <dietmar@ximian.com>

	* object.c (mono_runtime_invoke_array): applied patch from Rachel
	Hestilow to fix bug #25104

2002-05-21  Martin Baulig  <martin@gnome.org>

	* debug-symfile.c (mono_debug_find_source_location): New function.
	Looks up an IL offset in the line number table and returns the source
	location as a string.

2002-05-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c:
	(mono_double_ToStringImpl): changed %f by %g until we have something
	better.

2002-05-21  Nick Drochak  <ndrochak@gol.com>

	* icall.c : Use different name for Math.Pow's icall.  Needed to check
	parameters first in C#.

Mon May 20 17:36:36 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c, reflection.h: added icall to get info about an event.

2002-05-20  Radek Doulik  <rodo@ximian.com>

	* object.c (mono_value_box): don't use memcpy for boxing on BIG
	endian
	(mono_value_box): don't use memcpy for small sizes on
	architectures with unaligned access

2002-05-20  Martin Baulig  <martin@gnome.org>
