@@ -2580,10 +2580,8 @@ static gconstpointer icall_map [] = {
 	/*
 	 * Mono.CSharp.Debugger
 	 */
-	"Mono.CSharp.Debugger.MonoSymbolWriter::get_local_type_from_sig", 
-	ves_icall_Debugger_MonoSymbolWriter_get_local_type_from_sig,
-	"Mono.CSharp.Debugger.MonoSymbolWriter::get_method", 
-	ves_icall_Debugger_MonoSymbolWriter_method_from_token,
+	"Mono.CSharp.Debugger.MonoSymbolWriter::get_method_builder", 
+	ves_icall_Debugger_MonoSymbolWriter_method_builder_from_token,
 	"Mono.CSharp.Debugger.DwarfFileWriter::get_type_token", 
 	ves_icall_Debugger_DwarfFileWriter_get_type_token,
 
